--- a/test/test.html
+++ b/test/test.html
@@ -12,8 +12,19 @@
 		<input type="text" id="pass2" value="" placeholder="确认密码" />
 		<input type="text" id="name" value="" placeholder="昵称" />
 		<input type="button" id="submitFn" value="提交注册" />
-		
-		
+		<link rel="stylesheet" href="../css/main.css" />
+		<div id="page" class="page">
+      	<ul>
+      		<li><a>上一页</a></li>
+      		<li><a>1</a></li>
+      		<li class="active"><a>2</a></li>
+      		<li><a>3</a></li>
+      		<li><a>4</a></li>
+      		<li><a>5</a></li>
+      		<li><a>下一页</a></li>
+      		<li class="goto"><input type="text" value=""><span>/1211</span><a>转页</a></li>
+      	</ul>
+      </div>
 <html>
  <head></head>
  <body>
