分类页好了

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 				<div class="secon_title">
 					<div class="secon_recomm">
 						<img src="./img/index/icon-6.jpg"/>
-						<span>全站推荐</span>
+						<span>新书推荐</span>
 						<div class="secon_More"><a href="javascript:;">更多></a></div>
 					</div>
 					<div>
@@ -574,7 +574,7 @@
 				<div class="New_title">
 					<div class="New_recomm">
 						<img src="./img/index/icon-9.jpg"/>
-						<span>新书推荐</span>
+						<span>最新小说更新列表</span>
 						<div class="New_More"><a href="javascript:;">更多></a></div>
 					</div>
 					<div class="New_update">
