--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<link rel="shortcut icon" href="favicon.ico" >
 		<title>首页</title>
 		<link rel="stylesheet" href="css/main.css" />
 		<link rel="stylesheet" href="css/index.css" />
@@ -739,5 +740,9 @@
 	<script type="text/javascript" src="js/components/header.js" ></script>
 	<script type="text/javascript" src="js/components/footer.js" ></script>
 	<script type="text/javascript" src="js/require/headerOrfooter.js"></script>
-
+	<script>
+		var indexHtml = new Vue({
+			el: '#app'
+		})
+	</script>
 </html>
