--- a/test/confirm.html
+++ b/test/confirm.html
@@ -61,11 +61,12 @@
         width: 50px;
         height: 22px;
         color: white;
-        background-color: #169BD5;
+        background-color: #9e9e9e;
         border-radius: 8px;
         text-align: center;
         line-height: 22px;
         margin-top:10px ;
+        cursor: pointer;
       }
        .alert-Block .alert_sub .flast {
         display: inline-block;
@@ -73,11 +74,18 @@
         width: 50px;
         height: 22px;
         color: white;
-        background-color: #777777;
+        background-color: #9e9e9e;
         border-radius: 8px;
         text-align: center;
         line-height: 22px;
         margin-top:10px ;
+        cursor: pointer;
+      }
+      .alert-Block .alert_sub .true:hover {
+        background-color: #00A1D6;
+      }
+      .alert-Block .alert_sub .flast:hover {
+        background-color: #00A1D6;
       }
 	  </style>
 	  
