--- a/test/test1.html
+++ b/test/test1.html
@@ -5,7 +5,8 @@
 		<title></title>
 	</head>
 	<body id="app">
-		<input type="button" @click="submitFn" value="提交" />
+		<input type="button" @click="submitFn" value="提交"  />
+		<div style="position: absolute;top: 0px;left: 0px;bottom:0px;right: 0px;width: 100%;height: 100px;z-index: 999999;"></div>
 	</body>
 	<script type="text/javascript" src="../js/vue.js" ></script>
 	<script type="text/javascript" src="../js/vue-resource.min.js" ></script>
@@ -22,8 +23,8 @@
 		  methods: {
 		  	submitFn: function() {
 			  	var _data = {};
-			  	_data.telephone = 13007230349;
-			  	SZXJ.http('get', 'http://localhost:8080/register/registerTelephoneCode.shtml', _data, 
+			  	_data.replyId = 1;
+			  	SZXJ.http('get', PathList.findCommentAndReplyByReplyUserId, _data, 
 		        (response) => {
 		          alert(JSON.stringify(response));
 				  console.log(response);
