--- a/test/alert.html
+++ b/test/alert.html
@@ -38,7 +38,7 @@
         border-radius: 4px 4px 8px 8px;
       }
       .confirm-Block .confirm_sub .confirm_foot {
-        width: 400px ;
+        width: 400px;
         height: 30px ;
         position: absolute;
         border-radius: 0 0 8px 8px;
@@ -57,8 +57,8 @@
         width: 60px;
         height: 60px;
         display:block;
-        margin-top: 30px;
-        margin-left: 65px;
+        margin-top: 35px;
+        margin-left: 55px;
         vertical-align: middle;
         float: left;
       }
@@ -68,13 +68,20 @@
         line-height: 30px;
         float: left;
         margin-top: 35px ;
+        
       }
+
       .confirm-Block .confirm_sub ul .alert {
         font-size: 20px;
         padding-left: 5px;
       }
       .confirm-Block .confirm_sub ul .alertToo {
         color: #d6d6d6;
+         width: 250px;
+         height: 40px;
+         line-height: 1.1;
+         text-indent:0.2em ;
+         padding-top: 5px;
       }
       .confirm-Block .confirm_sub ul .alert3 {
         display: none;
