--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       el: '#app',
       data: {
         path: PathList,
-        szxj: SZXJ,
+        szxj: SZXJ, // 公共方法
         indexList: {}, // 首页默认渲染数据
         theHotList: [], // 小编推荐
         pageNo: 0,
