--- a/test/alert.html
+++ b/test/alert.html
@@ -6,120 +6,23 @@
 		<link rel="stylesheet" href="../css/main.css" />
 	</head>
 	<body>
-	  <style>
-	   body {
-	     background-color: #ffffff;
-	   }
-	    .confirm-Block {
-	      display: block;
-	      position: fixed;
-	      top: 0px;
-	      bottom: 0px;
-	      left: 0px;
-	      right: 0px;
-	      width: 100%;
-	      height: 100%;
-	      background-color: rgba(0,0,0,0.3);
-	    }
-	    .confirm-Block .confirm_parent{
-        display: block;
-        position: absolute;
-        top: 30%;
-        width: 400px;
-        height: 120px;
-        left: 50%;
-      }
-      .confirm-Block .confirm_sub{
-        width: 100%;
-        height: 100%;
-        position: relative;
-        left: -50%;
-        background-color: white;
-        border-radius: 4px 4px 8px 8px;
-      }
-      .confirm-Block .confirm_sub .confirm_foot {
-        
-        width: 400px;
-        height: 30px ;
-        
-        border-radius: 0 0 8px 8px;
-        background-color: #a7d4f7;
-        text-align: center;
-        line-height: 30px;
-        color: white;
-        font-size: 16px;
-        top: 91px;
-        cursor: pointer;
-      }
-      .confirm-Block .confirm_sub .confirm_foot:hover {
-        background-color: #6cb8f1;
-      }
-      .confirm-Block .confirm_sub .words .confirm_img {
-        width: 60px;
-        height: 60px;
-        display:block;
-        margin-top: 20px;
-        margin-left: 50px;
-        vertical-align: middle;
-        float: left;
-      }
-      .confirm-Block .confirm_sub .words ul {
-        display: inline-block;
-        margin-left: 10px;
-        line-height: 30px;
-        float: left;
-        margin-top: 20px ;
-        min-height: 70px;
-        margin-bottom: 15px;
-      }
-
-      .confirm-Block .confirm_sub .words ul .alert {
-        font-size: 20px;
-        padding-left: 5px;
-      }
-      .confirm-Block .confirm_sub .words ul .alertToo {
-        color: #d6d6d6;
-         width: 250px;
-         min-height: 40px;
-         line-height: 1.1;
-         text-indent:0.2em ;
-         padding-top: 5px;
-      }
-      .confirm-Block .confirm_sub .words ul .alert3 {
-        display: none;
-        font-size: 20px;
-        margin: 45px;
-      }
-      .confirm-Block .confirm_sub .words {
-        width: 400px;
-        min-height: 90px;
-        border-radius: 4px 4px 0 0 ;
-        clear: both;
-        background-color: white;
-      }
-      .confirm-Block .confirm_sub .words .clear {
-        clear: both;
-      }
-	  </style>
-	  
-	  
-	  <div class="confirm-Block">
-	    <div class="confirm_parent">
-	      <div class="confirm_sub">
-	        <div class="words">
-    	        <div class="confirm_img"><img src="../img/confirm_flast.png" alt="" /></div>
-    	        <!--<div class="confirm_img"><img src="../img/confirm_ture.png" alt="" /></div>-->
-    	        <ul>
-    	          <li class="alert">操作失败</li>
-    	          <li class="alert3">操作成功</li>
-    	          <li class="alertToo">因僧问我西来意，我话山居不记年。因僧问我西来意，我话山居不记年。因僧问我西来意，我话山居不记年。因僧问我西来意，我话山居不记年。因僧问我西来意，我话山居不记年。</li>
-    	        </ul>
-    	        <div class="clear"></div>
-	        </div>
-	        <div class="confirm_foot">确认</div>
-	      </div>
-	    </div>
-	  </div>
+	  '<div class="alert-Block">'
+	  +  '<div class="alert_parent">'
+	  +   '<div class="alert_sub">'
+	  +     '<div class="words">'
+    +	        '<div v-if="trueFlag" class="alert_img"><img src="../img/alert_flast.png" /></div>'
+    +	        '<div v-else class="alert_img"><img src="../img/alert_ture.png" /></div>'
+    +	        '<ul>'
+    +	          '<li v-if="trueFlag" class="alert">操作失败</li>'
+    +	          '<li v-else class="alert3">操作成功</li>'
+    +	          '<li class="alertToo">{{ message }}</li>'
+    +	        '</ul>'
+    +	        '<div class="clear"></div>'
+	  +      '</div>'
+	  +      '<div class="alert_foot btn">确认</div>'
+	  +    '</div>'
+	  +  '</div>'
+	  +'</div>'
 	  
 	 
 	</body>
