--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="css/headerOrFooter.css" />
 	</head>
 	<body id="app" v-show="bodyFlag" style="display: none;">
+	  <alert v-ref:vue-alert></alert>
 	<myheader></myheader>
   <div class="index"> 
    <div class="Recomm"> 
@@ -385,11 +386,16 @@
 </div>	
 <myfooter></myfooter>
 </body>
+
 <script src="./js/apis/vueHttp.js"></script>
 <script src="./js/apis/conf.js"></script>
+
 <script type="text/javascript" src="./js/vue.min.js" ></script>
 <script type="text/javascript" src="./js/vue-resource.min.js" ></script>
 <script type="text/javascript" src="./js/vue-router.min.js" ></script>
+ <script src="./js/apis/Data.js"></script>
+ <script src="./js/apis/alert.js"></script>
+ <script src="./js/apis/confirm.js"></script>
 <script type="text/javascript" src="js/components/header.js" ></script>
 <script type="text/javascript" src="js/components/footer.js" ></script>
 <script type="text/javascript" src="js/require/headerOrfooter.js"></script>
