--- a/test/confirm.html
+++ b/test/confirm.html
@@ -11,18 +11,18 @@
 	  </style>
 	  
 	  
-	  <div class="confirmBlock">
-	    <div class="confirm_parent">
-	      <div class="confirm_sub">
-	         <div class="confirm_header">温馨提示</div>
-	         <div class="words">
-    	         <p>半神半圣亦半仙，全儒全道是全贤，脑中真书藏万卷，掌握文武半边天。</p>
-    	         <div class="true">确认</div>
-    	         <div class="flast">取消</div>
-	         </div>
-	      </div>
-	    </div>
-	  </div>
+	  '<div class="confirmBlock">'
+	    +'<div class="confirm_parent">'
+	      +'<div class="confirm_sub">'
+	         +'<div class="confirm_header">温馨提示</div>'
+	         +'<div class="words">'
+    	         +'<p>半神半圣亦半仙，全儒全道是全贤，脑中真书藏万卷，掌握文武半边天。</p>'
+    	         +'<div class="true">确认</div>'
+    	         +'<div class="flast">取消</div>'
+	         +'</div>'
+	      +'</div>'
+	    +'</div>'
+	  +'</div>'
 	  
 	  
 	</body>
