--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<link rel="stylesheet" href="css/headerOrFooter.css" />
 	</head>
-	<body id="app" v-show="bodyFlag" style="display: none;">
+	<body id="app" v-show="bodyFlag" style="display: none; background-color: #FeFeFe;">
 	  <alert v-ref:vue-alert></alert>
 	<myheader></myheader>
   <div class="index"> 
