--- a/index.html
+++ b/index.html
@@ -407,6 +407,6 @@
 </div> 
 </div>	
 <myfooter></myfooter>
-<script src="./js/main/indexMain.js"></script>
+<script src="./js/main/indexMain_60df474ad7.js"></script>
 </body>
 </html>
