--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>  
     <meta charset="utf-8"/>
-		<meta name="keywords" content="QC轻小说,原创轻小说,轻小说投稿">
+    <meta name="keywords" content="QC轻小说,原创轻小说,轻小说投稿">
     <meta name="description" content="QC原创轻小说，一个在二次元盛起的魔法圣殿，拥有魔幻与神奇色彩，为二次元提供轻小说投稿与画师约稿相结合的平台。加入我们，接受契约，用轻松奇幻的文字留下你心中的故事。 ">
 		<title>【QC轻小说】原创轻小说-轻小说投稿-</title>
-		<link rel="stylesheet" href="css/main.css" />
-		<link rel="stylesheet" href="css/index.css" />
-		<link rel="stylesheet" href="css/headerOrFooter.css" />
+		<link rel="stylesheet" href="css/main_ddfaca9e09.css" />
+		<link rel="stylesheet" href="css/index_73117f72cd.css" />
+		<link rel="stylesheet" href="css/headerOrFooter_69d072ec5f.css" />
 	</head>
 	<body id="app" v-show="bodyFlag" style="display: none;background-color: #FeFeFe;">
 	<alert v-ref:vue-alert></alert>
@@ -409,6 +409,6 @@
 </div> 
 </div>	
 <myfooter></myfooter>
-<script src="./js/main/indexMain_60df474ad7.js"></script>
+<script src="./js/main/indexMain_47fcd68a98.js"></script>
 </body>
 </html>
