--- a/index.html
+++ b/index.html
@@ -410,5 +410,14 @@
 </div>	
 <myfooter></myfooter>
 <script src="./js/main/indexMain_0e8e015f51.js"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?ec8c853059c8a6f927ecfbedee4c437d";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </body>
 </html>
